Update gift1.html with new song

--- a/gift1.html
+++ b/gift1.html
@@ -128,7 +128,7 @@
 </div>
 
 <audio id="bgMusic" autoplay>
-  <source src="wannabeyours.mp3" type="audio/mpeg">
+  <source src="Indila_-_Love_Story__Lyrics_(256k).mp3" type="audio/mpeg">
 </audio>
 
 <a href="gifts.html" class="back">⬅ Back to gifts</a>
