--- a/gift2.html
+++ b/gift2.html
@@ -55,8 +55,11 @@
     and missing you even when you just went offline.
   </div>
 
-  <p style="text-align:right;">XOXO 💕</p>
+ <p style="text-align:right;">XOXO 💕</p>
 
+  <audio id="bgMusic" autoplay>
+  <source src="wannabeyours.mp3" type="audio/mpeg">
+</audio>
   <a href="gifts.html">⬅ Back to gifts</a>
 </div>
 
