Update gift3.html with song

--- a/gift3.html
+++ b/gift3.html
@@ -48,12 +48,17 @@
     <li>You are officially my favorite human.</li>
     <li>Leaving me on “seen” is strictly illegal.</li>
     <li>even 120 rupees isn't enough for you actually</li>
+    <li>You should sometimes send me your cute pics or feet pics</li>
+    <li>You need to come with me abroad in the future 😽</li>
   </ul>
 
   <p>
     By existing and being you,  
     you automatically agree to all of the above 💖
   </p>
+   <audio id="bgMusic" autoplay>
+  <source src="Golden_Brown_-_The_Stranglers__slowed___reverb_(256k).mp3" type="audio/mpeg">
+   </audio>
 
   <a class="btn" href="final.html">I Agree 😌</a>
 </div>
