Update final.html with song

--- a/final.html
+++ b/final.html
@@ -80,6 +80,9 @@
     Happy Valentine’s 💕<br>
     — Yours
   </p>
+  <audio id="bgMusic" autoplay>
+  <source src="yung_kai_-_blue__Lyrics_(256k).mp3" type="audio/mpeg">
+  </audio>
 </div>
 
 </body>
